Replaced "Stream.toList()" with traditional "Stream.collect(Collectors.toList())" for Java 11 compatibility.